[gd_scene load_steps=5 format=3 uid="uid://c4xpqd83w51cq"]

[ext_resource type="Script" path="res://Scripts/scrj_wolf.gd" id="1_5jxfp"]
[ext_resource type="Texture2D" uid="uid://djlfl42gl5y8h" path="res://Images/Enemies/Wolf/T_Wolf_1.png" id="1_rwry1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4an2"]
size = Vector2(157, 101)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_joktc"]
radius = 65.0051
height = 199.99

[node name="obj_Enemy" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_5jxfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -58.5)
shape = SubResource("RectangleShape2D_a4an2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -74.0
offset_top = -148.0
offset_right = 31.0
offset_bottom = -43.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_rwry1")

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(-1, -55)
target_position = Vector2(84, 1)

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(-1, -55)
target_position = Vector2(-72, 0)

[node name="Enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
position = Vector2(2, -55)
rotation = -1.54647
shape = SubResource("CapsuleShape2D_joktc")

[connection signal="body_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
